# RMXCppKit

./: .gitignore  CMakeLists.txt  main.cpp
RMXEngine/: Behaviour.cpp  Behaviour.hpp  BoundingBox.cpp  BoundingBox.hpp  BoundingSphere.cpp  BoundingSphere.hpp  Camera.cpp  Camera.h  Camera.hpp  CollisionBody.cpp  CollisionBody.hpp  CollisionEvent.cpp  CollisionEvent.hpp  Delegates.hpp  EntityGenerator.cpp  EntityGenerator.hpp  GameController.cpp  GameController.hpp  GameNode.cpp  GameNode.hpp  GameView.cpp  GameView.hpp  Geometry.cpp  Geometry.hpp  Includes.h  NodeComponent.cpp  NodeComponent.h  NodeComponent.hpp  PhysicsBody.cpp  PhysicsBody.hpp  PhysicsWorld.cpp  PhysicsWorld.hpp  RMXEngine.hpp  RMXMath.cpp  RMXMath.hpp  Scene.cpp  Scene.hpp  SpriteBehaviour.cpp  SpriteBehaviour.hpp  Transform.cpp  (+3 more)
RMXKit/: Dictionary.cpp  Dictionary.h  EventListener.cpp  EventListener.h  Info.plist  LinkedList.cpp  LinkedList.h  NotificationCenter.cpp  NotificationCenter.h  Object.cpp  Object.h  RMXKit.cpp  RMXKit.h  RMXKitPriv.hpp  SimpleEventListener.cpp  SimpleEventListener.h  test2.cpp
RMXKit/Headers/: ASingleton.h  Dictionary.h  EventListener.h  LinkedList.h  NotificationCenter.h  Object.h  RMXKit.h  Tests.h
RMXMaths/: RMXMaths.h  operations.cpp  operations.h  raw_types.cpp  raw_types.h  types.cpp  types.h
games/: CMakeLists.txt  main.cpp
tests/: TestCase.cpp  TestCase.h
tests/RMXEngine/: CMakeLists.txt  CameraTest.cpp
tests/RMXKit/: CMakeLists.txt  EventListenerTest.cpp  ObjectTest.cpp  Tests.h  test2.cpp
tests/RMXMaths/: CMakeLists.txt  typesTest.cpp
